cleaned up a bit

--- a/arduino-audio.html
+++ b/arduino-audio.html
@@ -4,17 +4,17 @@
 <title>Play Audio Directly from Arduino to Speaker</title>
 <meta charset="utf-8"/>
 
-<link rel="stylesheet" type="text/css" href="index.css">
+<link rel="stylesheet" type="text/css" href="arduino-audio-style.css">
 </head>
 
 <body>
   <div id="container">
-    <h3>Upload your sound file</h3>
+    <b>Upload your sound file</b>
     <input type="file" id="myFile" onchange="getAudioAsNumbers()">
     <button id="copy" onclick="copyText()">Copy result</button>
 
     <textarea id="result"></textarea>
   </div>
-<script src="file:///C:/Users/hanna/Documents/Websites/arduino-audio/audioNumbers.js"></script>
+<script src="audioNumbers.js"></script>
 </body>
 </html>
