just changed the title

--- a/arduino-audio.html
+++ b/arduino-audio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Play Audio Directly from Arduino to Speaker</title>
+<title>arduino audio</title>
 <meta charset="utf-8"/>
 
 <link rel="stylesheet" type="text/css" href="arduino-audio-style.css">
